--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.76.0",
+    "@daily-co/daily-react": "^0.22.0",
+    "@jitsi/react-sdk": "^1.4.4",
     "@monaco-editor/react": "^4.7.0",
+    "@mui/material": "^6.4.7",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-jitsi": "^1.0.4",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5"
